--- a/html.html
+++ b/html.html
@@ -1,14 +1,14 @@
 <html>
-<head>
-<title>Titulo</title>
-<link rel="stylesheet" type="text/css" href="css/estilos.css"/>
-</head>
-<body>
-    <h1>
-hola mundo
-    </h1>
-    <p>
-        esto es un parrafo
-    </p>
-</body> 
+    <head>
+        <title>Titulo</title>
+        <link rel="stylesheet" type="text/css" href="css/estilos.css"/>
+    </head>
+    <body>
+        <div id="container">
+            <div id="post">
+                <h1>Titulo del post</h1>
+                <p>Contenido del post, esto es un parrafo</p>
+            </div>
+        </div>
+    </body> 
 </html>
