--- a/html.html
+++ b/html.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id = "header">
+                <h1>Titulo de la pagina</h1>
+            </div>
             <div id="post">
                 <h1>Titulo del post</h1>
                 <p>Contenido del post, esto es un parrafo</p>
