final de cabecera

--- a/html.html
+++ b/html.html
@@ -5,7 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div id = "header">
+            <div id= "header">
+                Hyperblog
+                <span id="tagline">Un blog increible</span>
                 <h1>Titulo de la pagina</h1>
             </div>
             <div id="post">
