--- a/html.html
+++ b/html.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Titulo del post</h1>
                 <p>Contenido del post, esto es un parrafo</p>
+                <p>otro parrafo</p>
             </div>
         </div>
     </body> 
