cambios conflicto header

--- a/html.html
+++ b/html.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id= "header">
                 Hyperblog
-                <span id="tagline">Un blog increible</span>
+                <span id="tagline">Un blog increibl cambio en header</span>
                 <h1>Titulo de la pagina</h1>
             </div>
             <div id="post">
