--- a/html.html
+++ b/html.html
@@ -7,13 +7,14 @@
         <div id="container">
             <div id= "header">
                 Hyperblog
-                <span id="tagline">Un blog increible</span>
+                <span id="tagline">Un blog increible master</span>
                 <h1>Titulo de la pagina</h1>
             </div>
             <div id="post">
                 <h1>Titulo del post</h1>
                 <p>Contenido del post, esto es un parrafo</p>
                 <p>otro parrafo</p>
+                <p>otro parrafo conflicto master</p>
             </div>
         </div>
     </body> 
