--- a/html.html
+++ b/html.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Titulo</title>
+        <title>Titulo 2.0</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css"/>
     </head>
     <body>
